# prompts

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/scripts/: build_sdist_and_wheel.sh
.github/workflows/: build_docs.yml  publish_docs.yml  tests.yml
docs/: index.md
docs/reference/: chat.md  dispatch.md  special_tokens.md  template.md
prompts/: __init__.py  chat.py  templates.py  tokens.py
reference/: index.html
reference/dispatch/: index.html
reference/special_tokens/: index.html
reference/template/: index.html
search/: search_index.json
tests/: test_chat.py  test_templates.py  test_tokens.py
