[project]
name = "prompts"
version = "0.1.0"
description = "Large Language Models prompting library"
authors = [{name = "The Outlines developers", email = "contact@dottxt.co"}]
requires-python = ">= 3.8"
dependencies = ["jinja2", "pydantic", "transformers"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prompts"]

[tool.setuptools.package-data]
"prompts" = ["py.typed"]

[tool.setuptools_scm]
write_to = "prompts/_version.py"

[project.optional-dependencies]
test = ["pre-commit", "pytest", "pytest-benchmark"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.readme]
file="README.md"
content-type = "text/markdown"

[[tool.mypy.overrides]]
module = ["jinja2", "pydantic", "pytest", "transformers"]
ignore_missing_imports = true
